--- a/src/app/user/components/form/form.component.html
+++ b/src/app/user/components/form/form.component.html
@@ -1,1 +1,39 @@
-<p>form works!</p>
+
+<div class="container">
+    <div class="row col-md-4 col-md-offset-3">
+        <div class="panel panel-primary form-card">
+            <mat-card>
+            <div class="panel-heading text-center">
+                <h2>User Form</h2>
+            </div>
+            <div class="panel-body">
+                <form #userForm="ngForm" (ngSubmit)="submit()">
+                    <!-- {{model|json}} -->
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input [(ngModel)]="model.email" type="text" name="email" id="email" class="form-control"
+                            required>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input [(ngModel)]="model.name" type="text" name="name" id="name" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="bio">Age</label>
+                        <input [(ngModel)]="model.age" type="text" name="bio" id="bio" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="active">Active</label>
+                        <input [(ngModel)]="model.active" type="text" name="active" id="active" class="form-control"
+                            required>
+                    </div>
+                    <div class="form-group button-center">
+                        <button type="submit" mat-raised-button class="submit-button">Submit</button>
+                    </div>
+                    
+                </form>
+            </div>
+        </mat-card>
+        </div>
+    </div>
+</div>
