--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,78 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #121212; color: white; }
+
+h2 {
+    text-align: center;
+    margin: 2rem;
+}
+.subheading {
+    font-size: 48px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.this-list {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+.this-card {
+    border-radius: 1.5%;
+    padding: 1rem;
+    width: 400px;
+  
+}
+.blog-card {
+   
+    border-radius: 1.5%;
+    padding: 1rem;
+    width: 400px;
+  
+}
+
+.form-card {
+    border-radius: 1.5%;
+    padding: 1rem;
+    width: 400px;
+}
+
+.center button:hover {
+    background-color: #fff;
+    color: #0a0a23;
+}
+
+.container  {
+    display: flex;
+    justify-content: center;
+}
+
+.button-center {
+    text-align: center;
+    margin: 2rem;
+   
+}
+.center button {
+    margin: 20px ;
+    text-align: center;
+    top:50%;
+    background-color:#0a0a23;
+    color: #fff;
+   
+}
+
+
+.submit-button {
+    background-color: #121212;
+    color: #fff;
+}
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.this-item {
+    padding: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 16px;
+}
