--- a/src/app/book/pages/book-list/book-list.component.html
+++ b/src/app/book/pages/book-list/book-list.component.html
@@ -1,7 +1,10 @@
 <h2>
-    List of Books
+    BOOKS
 </h2>
-
+<app-command-bar></app-command-bar>
 <div *ngFor="let book of books" class="this-list">
     <app-book-item [book]="book" (Emitter)="loveAction($event)"></app-book-item>
 </div>
+
+
+
