--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,88 @@
-<p>header works!</p>
+<nav class="sticky top-0 bg-slate-900 shadow-lg z-20">
+  <div class="max-w-6xl mx-auto px-4">
+    <div class="flex justify-between">
+      <div class="flex space-x-7">
+        <div>
+          <!-- Website Logo -->
+          <a href="#" class="flex items-center rounded py-4 px-2"><mat-icon>face</mat-icon>
+            <span class="py-1 px-1 text-black-500 rounded text-lg"
+              >Ronan Angular</span
+            >
+          </a>
+        </div>
+        <!-- Primary Navbar items -->
+        <div class="hidden md:flex items-center space-x-1">
+          <a
+            href="blog"
+            class="py-2 px-2 text-base text-white-300 rounded hover:text-black hover:bg-white transition duration-300"
+            >Home</a
+          >
+          <a
+            href="book"
+            class="py-2 px-2 text-base text-white-300 rounded hover:text-black hover:bg-white transition duration-300"
+            >Book</a
+          >
+        </div>
+      </div>
+      <!-- Secondary Navbar items -->
+      <div class="hidden md:flex items-center space-x-3">
+        <a
+          href="user"
+          class="py-2 px-2 text-base text-white-300 rounded hover:text-black hover:bg-white transition duration-300"
+          >Profile</a
+        >
+      </div>
+      <!-- Mobile menu button -->
+      <div class="md:hidden flex items-center">
+        <button class="outline-none mobile-menu-button">
+          <svg
+            class="w-6 h-6 text-white-500 hover:text-black hover:bg-white"
+            x-show="!showMenu"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+    </div>
+  </div>
+  <!-- mobile menu -->
+  <div class="hidden mobile-menu">
+    <ul class="">
+      <li>
+        <a
+          routerLink="/blog"
+          class="block text-sm px-2 py-4 hover:bg-sky-500 transition duration-300"
+          >Home</a
+        >
+      </li>
+      <li>
+        <a
+          routerLink="/book"
+          class="block text-sm px-2 py-4 hover:bg-sky-500 transition duration-300"
+          >Employee Form</a
+        >
+      </li>
+      <li>
+        <a
+          href="/user"
+          class="block text-sm px-2 py-4 hover:bg-sky-500 transition duration-300"
+          >Profile</a
+        >
+      </li>
+    </ul>
+  </div>
+  <script>
+    const btn = document.querySelector("button.mobile-menu-button");
+    const menu = document.querySelector(".mobile-menu");
+
+    btn.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
+    });
+  </script>
+</nav>
