--- a/src/app/shared/components/command-bar/command-bar.component.html
+++ b/src/app/shared/components/command-bar/command-bar.component.html
@@ -1,1 +1,4 @@
-<p>command-bar works!</p>
+ <div class="flex justify-center">
+    <button class="shokyu hover:bg-white hover:text-black flex justify-center p-2" (click)="emitAdd()"><mat-icon>add</mat-icon>Add</button>
+    <button class="henshu hover:bg-red-700 hover:text-white flex justify-center p-2"><mat-icon>delete</mat-icon> Delete</button>
+</div> 
